TTA notifications v06 PoC
